--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,7 @@ dependencies {
     //Koil image download
     implementation("io.coil-kt:coil:0.9.2")
 
+    // Image zoom
+//    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
 }
 }
